@@ -30,7 +30,9 @@ public interface DatabaseConnection {
 	public boolean isAutoCommit() throws SQLException;
 
 	/**
-	 * Set the auto-commit to be on (true) or off (false).
+	 * Set the auto-commit to be on (true) or off (false). Setting auto-commit to true may or may-not cause a commit
+	 * depending on the underlying database code.
+	 * 
 	 */
 	public void setAutoCommit(boolean autoCommit) throws SQLException;
 
